src/test/ui/consts/min_const_fn/bad_const_fn_body_ice.stderr
error[E0723]: heap allocations are not allowed in const fn
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add #![feature(const_fn)] to the crate attributes to enable
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
