src/test/ui/consts/min_const_fn/bad_const_fn_body_ice.rs
const fn foo(a: i32) -> Vec<i32> {
    vec![1, 2, 3] //~ ERROR heap allocations are not allowed in const fn
}

fn main() {}
